--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import Layout from "../layouts/Layout.astro";
 import CaseFile from "../components/CaseFile.astro";
 import MainHero from '../components/MainHero.astro';
 import ALPDVideo from '../components/ALPDVideo.astro';
-import References from "../components/references.astro";
+import References from "../components/References.astro";
 ---
 
 <Layout title="Welcome" showHeader={true} showISI={false}>
