✨ Second section: structure

--- a/src/pages/alpd-academy.astro
+++ b/src/pages/alpd-academy.astro
@@ -120,6 +120,60 @@ import Layout from "../layouts/Layout.astro";
             <sup>c</sup>PEA levels may be normal in some patients with hypophosphatasia.
         </p>
     </div>
+    <article class="alpd-academy__deficient">
+        <div class="alpd-academy__deficient-content">
+            <picture class="alpd-academy__deficient-pic">
+                <source srcset="/assets/images/alpd-academy/k-deficient-desktop.png" media="(min-width: 1024px)">
+                <source srcset="/assets/images/alpd-academy/k-deficient-tablet.png" media="(min-width: 500px)">
+                <img src="/assets/images/alpd-academy/k-deficient-mobile.png" alt="">
+                <figcaption>
+                    Image created for Alexion Pharmaceuticals, Inc. for illustrative purposes.
+                </figcaption>
+            </picture>
+
+            <div class="alpd-academy__deficient-content">
+                <h4 class="alpd-academy__deficient-paragraph-title">
+                    Deficient alkaline phosphatase in bone and teeth
+                </h4>
+                <p class="alpd-academy__deficient-paragraph">
+                    In hypophosphatasia, accumulation of PPi blocks hydroxyapatite crystal formation and bone mineralization, and excess calcium can lead to complications, such as<sup>1,10,11</sup>:
+                </p>
+                <ul class="alpd-academy__symptoms-list">
+                    <li>nephrocalcinosis</li>
+                    <li>kidney disorders</li>
+                    <li>chondrocalcinosis</li>
+                    <li>pseudogout</li>
+                </ul>
+            </div>
+
+            <picture class="alpd-academy__deficient-pic">
+                <source srcset="/assets/images/alpd-academy/k-neurlogic-desktop.png" media="(min-width: 1024px)">
+                <source srcset="/assets/images/alpd-academy/k-neurlogic-tablet.png" media="(min-width: 500px)">
+                <img src="/assets/images/alpd-academy/k-neurlogic-mobile.png" alt="">
+                <figcaption>
+                    Image created for Alexion Pharmaceuticals, Inc. for illustrative purposes.
+                </figcaption>
+            </picture>
+            <div class="alpd-academy__deficient-content">
+                <h4 class="alpd-academy__deficient-paragraph-title">
+                    Deficient alkaline phosphatase in the central nervous system (CNS)
+                </h4>
+                <p class="alpd-academy__deficient-paragraph">
+                    Pyridoxal 5`-phosphate (PLP) (ie, the active form of vitamin B6) deficiency in the CNS results in deficient GABA activity.<sup>1</sup>
+                </p>
+                <p class="alpd-academy__deficient-paragraph">
+                    Though the direct cause is unknown, hypophosphatasia is also associated with other neurologic symptoms in pediatrics and adults, like:<sup>8,12</sup>
+                </p>
+                <ul class="alpd-academy__symptoms-list">
+                    <li>fatigue</li>
+                    <li>headaches</li>
+                    <li>sleep disturbance</li>
+                    <li>vertigo</li>
+                    <li>mood (depression, anxiety)</li>
+                </ul>
+            </div>
+        </div>
+    </article>
   </section>
 
 </Layout>
