feat: :sparkles: Add section - hpp profile adults page
Add hpp profiling section in the hpp profile adult page

--- a/src/components/Navigation/HeaderPrimaryNavigation.astro
+++ b/src/components/Navigation/HeaderPrimaryNavigation.astro
@@ -8,7 +8,7 @@
         <a href="/alpd-academy" class="nav__menu_item_link">ALP Academy</a>
       </li>
       <li class="nav__menu_item">
-        <a href="#" class="nav__menu_item_link">HPP Profile</a>
+        <a href="/hpp-profile" class="nav__menu_item_link">HPP Profile</a>
       </li>
       <li class="nav__menu_item">
         <a href="#" class="nav__menu_item_link">Usual Suspects</a>
