--- a/src/styles/settings/_utils.scss
+++ b/src/styles/settings/_utils.scss
@@ -15,4 +15,18 @@ $color-value in $colors {
     }
 }
 
-;
+.text--center {
+    text-align: center;
+}
+
+.text--left {
+    text-align: left;
+}
+
+.text--right {
+    text-align: right;
+}
+
+.text--uppercase {
+    text-transform: uppercase;
+}
