cte section created 2/3

--- a/src/components/references.astro
+++ b/src/components/references.astro
@@ -1,4 +1,4 @@
-<div class="references">
+<div class="wrapper references">
 <slot>
     <p><strong>References:</strong> 
     <strong>1.</strong> Rockman-Greenberg C. Hypophosphatasia. Pediatr Endocrinol Rev. 2013;10(suppl 2):380-388. 
