--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import CaseFile from "../components/CaseFile.astro";
 import MainHero from '../components/MainHero.astro';
 import ALPDVideo from '../components/ALPDVideo.astro';
 import References from "../components/References.astro";
+import CTA from "../components/CTA.astro";
 ---
 
 <Layout title="Welcome" showHeader={true} showISI={false}>
@@ -53,5 +54,7 @@ import References from "../components/References.astro";
     <div class="red-string"></div>
   </section>
 
+
+  <CTA pageName="identifying-hpp" text="Read the full file on hypophosphatasia" buttonDescription="HPP Profile" link="#"/>
   <References />
 </Layout>
