--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -23,6 +23,7 @@
 @import './components/alpd-video';
 @import './components/references';
 @import './components/detective-form';
+@import './components/cta';
 
 
 .section__home-video {
